# had-better

./: .editorconfig  .env.celery.example  .env.django.example  .gitattributes  .gitignore  .mcp.json.example  .prettierignore  .prettierrc  6625_bus_subway_leg_response.json  API_SPEC_v4.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  PRD_v2.md  README.md  README2.md  README_demo.md  api_response.json  bus_subway_leg_response.json  docker-compose.celery.yml  docker-compose.django.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  leg_response.json  package-lock.json  package.json
.github/workflows/: backend-cd.yml  backend-ci.yml
backend/: .dockerignore  .env.example  .flake8  6625_bus_leg.json  Dockerfile  TESTING.md  bus_subway_leg.json  check_route.py  pyproject.toml  requirements.txt  start_server.bat  start_server.bat.example
backend/apps/itineraries/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/itineraries/migrations/: 0001_initial.py  0002_routesegment.py
backend/apps/places/: apps.py  models.py  serializers.py  urls.py  urls_saved.py  views.py  views_saved.py
backend/apps/places/migrations/: 0001_initial.py  0002_savedplace.py  0003_remove_savedplace_name.py  0004_searchplacehistory_deleted_at_and_more.py  0005_add_tmap_pkey.py  0006_alter_poiplace_tmap_pkey.py  0006_backfill_tmap_pkey_and_enforce_unique.py  0007_merge_20260121_1719.py  0008_merge_20260122_1523.py  0008_merge_20260122_1651.py  0009_merge_20260122_2212.py
backend/apps/routes/: apps.py  models.py  serializers.py  urls.py  views.py  views_bus.py  views_stats.py
backend/apps/routes/management/commands/: import_subway_stations.py  seed_stats_mock.py
backend/apps/routes/migrations/: 0001_initial.py  0002_add_subway_station.py  0003_change_bot_type_to_colors.py
backend/apps/routes/services/: __init__.py  bot_state.py  id_converter.py  sse_publisher.py  user_bus_monitor.py
backend/apps/routes/tasks/: __init__.py  bot_simulation.py  bus_positions.py
backend/apps/routes/utils/: __init__.py  bus_api_client.py  geo_utils.py  rabbitmq_client.py  redis_client.py  subway_api_client.py  subway_station_cache.py
backend/apps/users/: models.py  serializers.py  tests.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_last_login_date.py  0003_placesearchhistory.py  0004_delete_placesearchhistory.py
backend/apps/users/urls/: __init__.py  auth_urls.py  user_urls.py
backend/config/: __init__.py  celery.py  exceptions.py  responses.py  settings.py  urls.py
backend/config/management/: __init__.py
backend/config/management/commands/: __init__.py  runserver.py
backend/docs/: bot_simulation_architecture_v3.md  explain.md  leg_response.md  public_api_integration_flow_v1.md  서울교통공사_역명_지하철역_검색.csv
backend/rabbitmq/: advanced.config  rabbitmq.conf
backend/scripts/: format.sh  lint.sh  test.sh
docs/: DOCS_USER_BUS_MONITOR.md  PRD_v2.md  bot_simulation_code_v3.md  realtime-bus-technical-explanation.md  redis-usage-explained.md  search_itinerary_response.md  turf-interpolation-explained.md
frontend/: .env.example  .prettierignore  CHARACTER_MOVING_TEST.md  FONT_GUIDELINES_SIMPLE.md  README.md  ROUTE_BASED_INTERPOLATION.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/buildings/: dobong.geojson  geumcheon.geojson  nowon.geojson  yangcheon.geojson
frontend/scripts/: build-sprites.mjs  convert-osm-relations.cjs  convert-osm-subway.cjs  extract-station-coords.cjs
frontend/src/: App.tsx  index.css  main.tsx  team.tsx  vite-env.d.ts
frontend/src/app/: router.tsx
frontend/src/components/: AnimatedCharacter.tsx  CharacterMovingTest.tsx  CoverPage.tsx  DashboardPage.tsx  FavoritePlacesPage.tsx  FullMapPage.tsx  GameResultPage.tsx  LoginPage.tsx  MapCharacter.tsx  MapContainer.tsx  MapPage.tsx  MovingCharacter.tsx  OnboardingPage.tsx  PlaceInfoPage.tsx  PlaceMapPage.tsx  PlacesPage.tsx  RaceMapView.tsx  RouteDetailPage.tsx  RouteSelectionPage.tsx  SignUpPage.tsx  SubwayMap.tsx
frontend/src/data/: metro-line.json  seoul_train_relations.json  stations.json  subway-lines-osm.json
frontend/src/hooks/: useBuildingLayer.ts  useRouteMapLayers.ts  useRouteSSE.ts  useRouteSimulation.ts  useUserDistance.ts
frontend/src/imports/: App-12-344.tsx  Button-100-366.tsx  Button.tsx  Container.tsx  Container15-59-6738.tsx  Container15-9-1304.tsx  Container48.tsx  Cover-27-643.tsx  Cover.tsx  CuteGameConceptMapApp-2-1824.tsx  CuteGameConceptMapApp-2-2046.tsx  CuteGameConceptMapApp-5-665.tsx  CuteGameConceptMapApp.tsx  Desktop-109-1044.tsx  Desktop-118-1630.tsx  Desktop-134-309.tsx  Desktop-136-580.tsx  Desktop-139-763.tsx  Desktop-140-353.tsx  Desktop.tsx  (+56 more)
frontend_backup/: .env.example  eslint.config.js  package.json
log-data/: USER_MOVEMENT_FIX_LOG.md
monitoring/prometheus/: prometheus.yml
(+94 files in other folders)
